--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Find Movies</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/af07371b52.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 <body>
     <header>
@@ -83,9 +84,7 @@
                     </select> -->
                 </div>
                 <div class="movies__list--wrapper">
-                    <div class="loading">
-                       <i class="fas fa-spinner"></i>
-                    </div>
+                        <i class="fas fa-spinner movies__loading--spinner"></i>
                 </div>
                </div>
             </div>
