--- a/index.html
+++ b/index.html
@@ -77,14 +77,11 @@
             <div class="row">
                 <div class="search__filter">
                     <h2 class="search">Search results for:</h2>
-                    <!-- <select id="filter-movies" class="filter" onchange="filterMovies(event)">
-                      <option value="" disabled selected>Sort</option>
-                      <option value="OLD__TO__NEW">Year , Old to New</option>
-                      <option value="NEW__TO__OLD">Year , New to Old</option>
-                    </select> -->
                 </div>
-                <div class="movies__list--wrapper">
+                <div id="movie__wrapper" class="">
                         <i class="fas fa-spinner movies__loading--spinner"></i>
+                        <div class="movies__list--wrapper">
+                        </div>
                 </div>
                </div>
             </div>
